[package]
name = "prost-wkt-derive"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fdeantoni/prost-wkt"
description = "Helper crate for prost to allow JSON serialization and deserialization of Well Known Types."
readme = "README.md"
documentation = "https://docs.rs/prost-wkt-derive"
edition = "2018"

[lib]
proc_macro = true

[dependencies]
anyhow = "1"
itertools = "0.9"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = [ "extra-traits" ] }
