[package]
name = "prost-wkt-example"
version = "0.7.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2021"
rust-version = "1.75.0"

[dependencies]
prost = "0.14.1"
prost-wkt = { path = ".." }
prost-wkt-types = { path = "../wkt-types" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.40", default-features = false, features = [
    "clock",
    "serde",
] }

[build-dependencies]
prost-build = "0.14.1"
prost-wkt-build = { path = "../wkt-build" }
