[package]
name = "prost-wkt-example"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
prost.workspace = true
prost-wkt = { path = "../wkt" }
prost-wkt-types = { path = "../wkt-types" }
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }

[build-dependencies]
prost-build.workspace = true
prost-wkt-build = { path = "../wkt-build" }
