[package]
name = "prost-wkt-types"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
prost = { git = "https://github.com/fdeantoni/prost", branch = "meta" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
mopa = "0.2.2"
typetag = "0.1"

[build-dependencies]
prost-build = { git = "https://github.com/fdeantoni/prost", branch = "meta" }

