[package]
name = "prost-wkt"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fdeantoni/prost-wkt"
description = "Helper crate for prost to allow JSON serialization and deserialization of Well Known Types."
readme = "../README.md"
documentation = "https://docs.rs/prost-wkt"
keywords = ["protobuf", "serde", "json"]
categories = ["encoding"]
edition = "2018"

[lib]
doctest = false

[dependencies]
prost = { git = "https://github.com/fdeantoni/prost", branch = "meta" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
mopa = "0.2.2"
typetag = "0.1"
prost-wkt-derive = { path = "../derive" }

[build-dependencies]
prost-build = { git = "https://github.com/fdeantoni/prost", branch = "meta" }

[dev-dependencies]
proptest = "0.9"