[package]
name = "prost-wkt-build"
version = "0.3.3"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fdeantoni/prost-wkt"
description = "Helper crate for prost to allow JSON serialization and deserialization of Well Known Types."
readme = "../README.md"
documentation = "https://docs.rs/prost-wkt-build"
edition = "2018"

[dependencies]
prost = "0.10.0"
prost-types = "0.10.0"
prost-build = "0.10.0"
quote = "1.0"
convert_case = "0.5"
