[package]
name = "prost-wkt-build"
version = "0.5.1"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fdeantoni/prost-wkt"
description = "Helper crate for prost to allow JSON serialization and deserialization of Well Known Types."
readme = "../README.md"
documentation = "https://docs.rs/prost-wkt-build"
edition = "2021"
rust-version = "1.70"

[dependencies]
prost = "0.13.1"
prost-types = "0.13.1"
prost-build = "0.13.1"
quote = "1.0"
heck = { version = ">=0.4, <=0.5" }
