[package]
name = "prost-wkt-types"
version = "0.5.1"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fdeantoni/prost-wkt"
description = "Helper crate for prost to allow JSON serialization and deserialization of Well Known Types."
readme = "../README.md"
documentation = "https://docs.rs/prost-wkt"
keywords = ["protobuf", "serde", "json"]
categories = ["encoding"]
edition = "2021"
rust-version = "1.60"

[lib]
doctest = false

[features]
default = ["std"]
std = []
vendored-protoc = ["protobuf-src"]
vendored-protox = ["protox"]

[dependencies]
prost-wkt = { version = "0.5.1", path = ".." }
prost = "0.12.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4.27", default-features = false, features = ["serde"] }

[build-dependencies]
prost = "0.12.1"
prost-types = "0.12.1"
prost-build = "0.12.1"
prost-wkt-build = { version = "0.5.1", path = "../wkt-build" }
regex = "1"
protobuf-src = { version = "1.1.0", optional = true }
protox = { version = "0.6.0", optional = true }
