[package]
name = "prost-wkt-types"
version = "0.7.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fdeantoni/prost-wkt"
description = "Helper crate for prost to allow JSON serialization and deserialization of Well Known Types."
readme = "../README.md"
documentation = "https://docs.rs/prost-wkt"
keywords = ["protobuf", "serde", "json"]
categories = ["encoding"]
edition = "2021"
rust-version = "1.71.1"

[lib]
doctest = false

[features]
default = ["std"]
std = []
vendored-protoc = ["protobuf-src"]
vendored-protox = ["protox"]

[dependencies]
prost-wkt = { version = "0.7.0", path = ".." }
prost = "0.13.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde-value = "0.7"
chrono = { version = "0.4.27", default-features = false, features = ["serde"] }

[build-dependencies]
prost = "0.13.5"
prost-types = "0.13.5"
prost-build = "0.13.5"
regex = "1"
protobuf-src = { version = "2.1.1", optional = true }
protox = { version = "0.7.2", optional = true }
