[package]
name = "prost-wkt-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[features]
default = ["std"]
std = []
vendored-protoc = ["protobuf-src"]
vendored-protox = ["protox"]

[dependencies]
prost-wkt.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
chrono.workspace = true
schemars = { version = "1.2.0", optional = true }

[build-dependencies]
prost.workspace = true
prost-types.workspace = true
prost-build.workspace = true
prost-wkt-build.workspace = true
regex = "1.12.2"
protobuf-src = { version = "2.1.0", optional = true }
protox = { version = "0.9.1", optional = true }
