[package]
name = "prost-wkt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
chrono.workspace = true
inventory = "0.3.21"
typetag = "0.2.21"